# django-bit-enum-list-field

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
bit_enum_list_field/: bit_enum_list_field.py
bit_enum_list_field/lookups/: bit_enum_list_all_lookup.py  bit_enum_list_any_lookup.py  bit_enum_list_none_lookup.py
django_bit_enum_list_field/: settings.py
events/: enums.py  models.py
events/migrations/: 0001_initial.py  0002_eventwithdefault_eventwithemptydefault.py
lib/: bit_enum_list_field.py
tests/: test_db_query.py  test_default_values.py  test_model_crud.py
