[tool.poetry]
name = "django-bit-enum-list-field"
version = "0.1.0"
description = "A field for Django models to store lists of enums as integers"
authors = ["Emanuele Manfredini <emanuele.manfredini.1992@gmail.com>"]
license = "GPLv3"
repository = "https://github.com/tavearn/django-bit-enum-list-field"
homepage = "https://github.com/tavearn/django-bit-enum-list-field"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    {include = "bit_enum_list_field"}
]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
